@@ -1,5 +1,15 @@
 Changes in javaGeom library
 
+javaGeom-0.10.2   (2012.03.11, rev. 315)
+=====
+
+* fixed clipping of PolyOrientedCurve2D
+* added Domain2D.getAsPolygon()
+* fixed bug for computation of polygons buffer
+* enhanced buffer computation of curves with coincident tangents by using
+	curvature information
+* updated MultiPolygon2D class
+
 
 javaGeom-0.10.1   (2012.01.19, rev. 306)
 =====
